@@ -1,3 +1,0 @@
-@prefix eg: <http://example.org/eg#> .
-
-eg:s eg:p [ =: _:o ; eg:name "o" ] .
