@@ -1,2 +1,0 @@
-<http://example.org/eg#s> <http://example.org/eg#p> <http://example.org/object> .
-<http://example.org/object> <http://example.org/eg#name> "o" .
